--- a/demo/package.json
+++ b/demo/package.json
@@ -10,7 +10,7 @@
     "@react-native-community/async-storage": "^1.3.3",
     "react": "16.8.3",
     "react-native": "0.59.5",
-    "react-native-hooks-persist": "https://github.com/rcerrejon/react-native-hooks-persist"
+    "react-native-hooks-persist": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
